--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: var(--bg);
   color: black;
+  /* min-height: 2000px; */
 }
 
 /* Navbar */
@@ -191,7 +192,37 @@ body {
   display: none;
 }
 
-/* Media Queries/Responsive */
+/* Hero Section*/
+.hero {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url("../img/header-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.hero::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /*background: linear-gradient(
+    0deg,
+    rgba(188, 176, 157, 0.215) 3%,
+    rgba(167, 150, 117, 0) 25%
+  );*/
+}
+
+.hero .content {
+  padding: 1.4rem 6.5%;
+  max-width: 60rem;
+}
+
+/* Media Queries*/
 
 /* Laptop */
 @media (max-width: 1366px) {
