--- a/e-commerce/style.css
+++ b/e-commerce/style.css
@@ -539,6 +539,185 @@ footer .copyright {
   text-align: center;
 }
 
+/*Shop HTML*/
+#page-header{
+  background-image: url(img/banner/b1.jpg);
+  width: 100%;
+  height: 40vh;
+  background-size:cover;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 14px;
+}
+
+#page-header h2,
+#page-header p{
+  color: white;
+}
+
+#pagination{
+  text-align: center;
+}
+
+#pagination a{
+  text-decoration: none;
+  background-color: #088178;
+  padding: 15px 20px;
+  border-radius: 4px;
+  color: white;
+  font-weight: 600;
+}
+
+#pagination a i{
+  font-size: 16px;
+  font-weight: 600;
+}
+
+#prodetails{
+  display: flex;
+  margin-top: 20px;
+}
+
+#prodetails .single-pro-image{
+  width: 40%;
+  margin-right: 50px;
+}
+
+.small-img-group{
+  display: flex;
+  justify-content: space-between;
+}
+
+.small-img-col{
+  flex-basis: 24%;
+  cursor: pointer;
+}
+
+#prodetails .single-pro-details{
+  width: 50%;
+  padding-top: 30px;
+}
+
+#prodetails .single-pro-details h4{
+  padding: 40px 0 20px 0;
+}
+
+#prodetails .single-pro-details h2{
+  font-size: 26px;
+}
+
+#prodetails .single-pro-details select{
+  display: block;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+}
+
+#prodetails .single-pro-details input{
+  width: 50px;
+  height: 47px;
+  padding-left: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+#prodetails .single-pro-details input:focus{
+  outline: none;
+}
+
+#prodetails .single-pro-details button{
+  background: #088178;
+  color: white;
+}
+
+#prodetails .single-pro-details span{
+  line-height: 25px;
+}
+
+/* Contact HTML */
+#contact-details{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#contact-details .details{
+  width: 40%;
+}
+
+#contact-details .details span,
+#form-details form span{
+  font-size: 12px;
+}
+
+#contact-details .details h2,
+#form-details form h2{
+  font-size: 26px;
+  line-height: 35px;
+  padding: 20px 0;
+}
+
+#contact-details .details h3{
+  font-size: 16px;
+  padding-bottom: 15px;
+}
+
+#contact-details .details li{
+  list-style: none;
+  display: flex;
+  padding: 10px 0;
+}
+
+#contact-details .details li i{
+  font-size: 14px;
+  padding-right: 22px;
+}
+
+#contact-details .details li p{
+  margin: 0;
+  font-size: 14px;
+}
+
+#contact-details .map{
+  width: 55%;
+  height: 400px;
+}
+
+#contact-details .map iframe{
+  width: 100%;
+  height: 100%;
+}
+
+#form-details{
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
+  padding: 80px;
+  border: 1px solid #e1e1e1;
+}
+
+#form-details form{
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#form-details form input,
+#form-details form textarea{
+  width: 100%;
+  padding: 12px 15px;
+  outline: none;
+  margin-bottom: 20px;
+  border: 1px solid #e1e1e1;
+}
+
+#form-details form button{
+  background-color: #088178;
+  color: #fff;
+}
+
 /* Start Media Query*/
 @media (max-width: 799px) {
   .section-p1 {
@@ -635,6 +814,8 @@ footer .copyright {
   #newsletter .form {
     width: 70%;
   }
+
+  /* Contact HTML */
 }
 
 @media (max-width: 477px) {
@@ -689,7 +870,7 @@ footer .copyright {
     text-align: start;
   }
 
-/*Single product*/
+  /*Single product*/
   #prodetails{
     display: flex;
     flex-direction: column;
@@ -703,100 +884,29 @@ footer .copyright {
   #prodetails .single-pro-details{
     width: 100%;
   }
-}
 
-/*Shop HTML*/
-#page-header{
-  background-image: url(img/banner/b1.jpg);
-  width: 100%;
-  height: 40vh;
-  background-size:cover;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  flex-direction: column;
-  padding: 14px;
-}
+  /* Contact HTML */
+  #contact-details{
+    flex-direction: column;
+  }
 
-#page-header h2,
-#page-header p{
-  color: white;
-}
+  #contact-details .details{
+    width: 100%;
+    margin-bottom: 30px;
+  }
 
-#pagination{
-  text-align: center;
-}
+  #contact-details .map{
+    width: 100%;
+  }
 
-#pagination a{
-  text-decoration: none;
-  background-color: #088178;
-  padding: 15px 20px;
-  border-radius: 4px;
-  color: white;
-  font-weight: 600;
-}
+  #form-details{
+    margin: 10px;
+    padding: 30px 10px;
+    flex-wrap: wrap;
+  }
 
-#pagination a i{
-  font-size: 16px;
-  font-weight: 600;
-}
-
-#prodetails{
-  display: flex;
-  margin-top: 20px;
-}
-
-#prodetails .single-pro-image{
-  width: 40%;
-  margin-right: 50px;
-}
-
-.small-img-group{
-  display: flex;
-  justify-content: space-between;
-}
-
-.small-img-col{
-  flex-basis: 24%;
-  cursor: pointer;
-}
-
-#prodetails .single-pro-details{
-  width: 50%;
-  padding-top: 30px;
-}
-
-#prodetails .single-pro-details h4{
-  padding: 40px 0 20px 0;
-}
-
-#prodetails .single-pro-details h2{
-  font-size: 26px;
-}
-
-#prodetails .single-pro-details select{
-  display: block;
-  padding: 5px 10px;
-  margin-bottom: 10px;
-}
-
-#prodetails .single-pro-details input{
-  width: 50px;
-  height: 47px;
-  padding-left: 10px;
-  font-size: 16px;
-  margin-right: 10px;
-}
-
-#prodetails .single-pro-details input:focus{
-  outline: none;
-}
-
-#prodetails .single-pro-details button{
-  background: #088178;
-  color: white;
-}
-
-#prodetails .single-pro-details span{
-  line-height: 25px;
+  #form-details form{
+    width: 100%;
+    margin-bottom: 30px;
+  }
 }
